# lkv

./: .gitignore  BKSeries.nb  Cargo.toml  README.md  brown_polys.nb
src/: auxiliary.rs  brown_polys.rs  cyc_and_lie.rs  densematrix.rs  main.rs
