[package]
name = "lkv"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = "4.5.39"
i256 = {version="0.2.2", features=["i512"] }
image = "0.25.6"
indicatif = "0.17.11"
itertools = "0.14.0"
num-traits = "0.2.19"
rand = "0.9.1"
rayon = "1.10.0"
rustc-hash = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"